[gd_scene load_steps=5 format=3 uid="uid://dui626cl3n5lj"]

[ext_resource type="Script" uid="uid://caf1fkumn1dt" path="res://script/__Interactor.gd" id="1_opjjb"]
[ext_resource type="Resource" uid="uid://iko6hapeb72" path="res://Resource/interactorSnake.tres" id="2_sxx31"]
[ext_resource type="SpriteFrames" uid="uid://c87d7f121a2mx" path="res://Resource/Animation/snakeBlink.tres" id="4_7hj8e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6sb4i"]
radius = 64.0

[node name="Interactor" type="Area2D"]
script = ExtResource("1_opjjb")
resource = ExtResource("2_sxx31")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("4_7hj8e")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6sb4i")
debug_color = Color(0, 0, 1, 0.0431373)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="interacted" from="." to="." method="_on_interacted"]
